syntax = "proto3";

package auth;

service AuthService {
  rpc Login (LoginRequest) returns (SuccessResponse);
  rpc SignUp (SignUpRequest) returns (SuccessResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (SuccessResponse);
  rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse);
}


message LoginRequest {
  string email = 1;
  string password = 2;
  string role = 3;
}

message SignUpRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  string phoneNo = 4;
  string role = 5;
}

message LogoutRequest {
  string userId = 1;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message ResetPasswordRequest {
  string userId = 1;
  string newPassword = 2;
}

message AuthResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message LogoutResponse {
  bool success = 1;
}

message ResetPasswordResponse {
  bool success = 1;
}

message ErrorResponse {
  int32 code = 1;
  string message = 2;
  string details = 3;
}

// Success response message
message SuccessResponse {
  bool success = 1;                // Indicates if the request was successful
  string timestamp = 2;            // ISO timestamp of the response
  bytes data = 3;                  // Main response data (serialized as bytes)
  Meta meta = 4;                   // Metadata about the response

  // Nested metadata message
  message Meta {
    int32 code = 1;                // HTTP status code (e.g., 200)
    string message = 2;            // Human-readable message (e.g., "Success")
    map<string, string> extras = 3; // Additional key-value pairs
  }
}